--- a/default.yaml
+++ b/default.yaml
@@ -17,7 +17,7 @@ schema_list:
 
 # 菜单
 menu:
-  page_size: 5  # 候选词个数
+  page_size: 6  # 候选词个数
   # alternative_select_labels: [ ①, ②, ③, ④, ⑤, ⑥, ⑦, ⑧, ⑨, ⑩ ]  # 修改候选项标签
   # alternative_select_keys: ASDFGHJKL  # 如编码字符占用数字键，则需另设选字键
 
@@ -54,11 +54,11 @@ switcher:
 ascii_composer:
   good_old_caps_lock: true  # true | false
   switch_key:
-    Caps_Lock: clear  # commit_code | commit_text | clear
-    Shift_L: noop     # commit_code | commit_text | inline_ascii | clear | noop
-    Shift_R: noop     # commit_code | commit_text | inline_ascii | clear | noop
-    Control_L: noop   # commit_code | commit_text | inline_ascii | clear | noop
-    Control_R: noop   # commit_code | commit_text | inline_ascii | clear | noop
+    Caps_Lock: commit_code # Caps 键
+    Shift_L: commit_code # 左 Shift，切换中英文
+    Shift_R: commit_code # 右 Shift，切换中英文
+    Control_L: noop # 左 Control，屏蔽该切换键
+    Control_R: noop # 右 Control，屏蔽该切换键
 
 
 # punctuator 和 recognizer 由具体方案指定了
